--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <title>ChatWoot Example</title>
   </head>
   <body>
-    <h1 class="text-center mt-5">Hello, Chatwoot!</h1>
+    <h1 id="satu" class="text-center mt-5 hello">Hello, Chatwoot!</h1>
     <script>
       (function (d, t) {
-        var BASE_URL = "https://app.chatwoot.com";
+        var BASE_URL = "https://chatwoot-digital-center.herokuapp.com";
         var g = d.createElement(t),
           s = d.getElementsByTagName(t)[0];
         g.src = BASE_URL + "/packs/js/sdk.js";
@@ -28,11 +29,32 @@
         s.parentNode.insertBefore(g, s);
         g.onload = function () {
           window.chatwootSDK.run({
-            websiteToken: "ykiRghgvMyUHLg3bAVPrqWZg",
+            websiteToken: "BaeSnAj1PbfrYqt87nC25oPC",
             baseUrl: BASE_URL,
           });
         };
       })(document, "script");
+    </script>
+
+    <script>
+      var waitForEl = function (selector, callback) {
+        if (jQuery(selector).length) {
+          callback();
+        } else {
+          setTimeout(function () {
+            waitForEl(selector, callback);
+          }, 100);
+        }
+      };
+      $(document).ready(function () {
+        waitForEl(".woot-widget-holder", function () {
+          $(".woot-widget-holder").css("position", "relative");
+          $(".woot-widget-holder").append(`
+            <div class="position-absolute top-100 start-50 translate-middle" style="height: 60px; width: 200px; background-color:#f4f6fb;">
+            </div>
+            `);
+        });
+      });
     </script>
 
     <script
