--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="google-signin-client_id"
+      content="197839969432-rla4uic58jcuiilg4gr1g922bhmi6u5f.apps.googleusercontent.com"
+    />
 
     <!-- Bootstrap CSS -->
     <link
@@ -18,6 +22,26 @@
   </head>
   <body>
     <h1 id="satu" class="text-center mt-5 hello">Hello, Chatwoot!</h1>
+
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <a href="#" onclick="signOut();">Sign out</a>
+
+    <script>
+      function onSignIn(googleUser) {
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Do not send to your backend! Use an ID token instead.
+        console.log("Name: " + profile.getName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail()); // This is null if the 'email' scope is not present.
+      }
+      function signOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+          console.log("User signed out.");
+        });
+      }
+    </script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script>
       (function (d, t) {
         var BASE_URL = "https://chatwoot-digital-center.herokuapp.com";
