--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
       }
     </script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+
     <script>
       (function (d, t) {
-        var BASE_URL = "https://chatwoot-digital-center.herokuapp.com";
+        var BASE_URL = "http://52.148.88.136";
         var g = d.createElement(t),
           s = d.getElementsByTagName(t)[0];
         g.src = BASE_URL + "/packs/js/sdk.js";
@@ -57,7 +58,7 @@
         s.parentNode.insertBefore(g, s);
         g.onload = function () {
           window.chatwootSDK.run({
-            websiteToken: "BaeSnAj1PbfrYqt87nC25oPC",
+            websiteToken: "nkFzWXKW7ncTCC7ccewKiFq9",
             baseUrl: BASE_URL,
           });
         };
