--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <title>ChatWoot Example</title>
   </head>
   <body>
+    <iframe
+      width="700"
+      height="200"
+      src="htt‍ps://www‍.youtube.com/live_chat?v=Gn3HxPndtiI&embed_domain=demo-chatwoot.netlify.app"
+    ></iframe>
     <h1 id="satu" class="text-center mt-5 hello">Hello, Chatwoot!</h1>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
@@ -47,7 +52,12 @@
     </script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-    <script>
+    <!-- <script
+      src="//code.tidio.co/omgpcsth1a2rkrse4xjno1bulozbuqej.js"
+      async
+    ></script> -->
+
+    <!-- <script>
       (function (d, t) {
         var BASE_URL = "https://chatwoot-digital-center.herokuapp.com";
         var g = d.createElement(t),
@@ -94,7 +104,7 @@
             "cdd07733be71ac710deddc9e9aefc6f0a0abec92d63979802ac4d5cfadd91c72",
         });
       });
-    </script>
+    </script> -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
