--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <iframe
       width="700"
       height="200"
-      src="htt‍ps://www‍.youtube.com/live_chat?v=Gn3HxPndtiI&embed_domain=demo-chatwoot.netlify.app"
+      src="htt‍ps://www‍.youtube.com/live_chat?v=Gn3HxPndtiI&embed_domain=https://demo-chatwoot.netlify.app/"
     ></iframe>
     <h1 id="satu" class="text-center mt-5 hello">Hello, Chatwoot!</h1>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
