--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <div class="container"></div>
+    <div id="chat-embed-wrapper"></div>
 
     <script>
       function onSignIn(googleUser) {
