yt chat nw final

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         window.location.hostname;
       frame.frameBorder = "0";
       frame.height = "400px";
-      frame.width = "400px";
+      frame.width = "100%";
       frame.id = "chat-embed";
       let wrapper = document.getElementById("chat-embed-wrapper");
       wrapper.appendChild(frame);
