--- a/index.html
+++ b/index.html
@@ -4,33 +4,58 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
+    <!-- <meta
       name="google-signin-client_id"
       content="197839969432-rla4uic58jcuiilg4gr1g922bhmi6u5f.apps.googleusercontent.com"
-    />
+    /> -->
 
     <!-- Bootstrap CSS -->
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    /> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
 
     <title>ChatWoot Example</title>
   </head>
   <body>
+    <p>Halloooo....</p>
+    <!-- <div
+      id="overlay-alert"
+      style="
+        background: rgba(0, 0, 0, 0.5);
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+        top: 0;
+        left: 0;
+        position: fixed;
+      "
+    >
+      <div
+        class="py-3 text-center"
+        style="background-color: red; position: fixed; bottom: 0; width: 100%"
+      >
+        Pesan....
+      </div>
+    </div>
     <h1 id="satu" class="text-center mt-5 hello">Hello, Chatwoot!</h1>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
     <div class="container"></div>
+    <iframe
+      width="420"
+      height="315"
+      src="https://www.youtube.com/embed/7A_ovYw6pYk"
+    >
+    </iframe>
     <div
       id="chat-embed-wrapper"
       style="width: 100%; background-color: aqua"
-    ></div>
-
-    <script>
+    ></div> -->
+    <!-- <script>
       function onSignIn(googleUser) {
         var profile = googleUser.getBasicProfile();
         console.log("ID: " + profile.getId()); // Do not send to your backend! Use an ID token instead.
@@ -53,7 +78,7 @@
       let frame = document.createElement("iframe");
       frame.referrerPolicy = "origin";
       frame.src =
-        "https://www.youtube.com/live_chat?v=nQ9a96O2REA&embed_domain=" +
+        "https://www.youtube.com/live_chat?v=7A_ovYw6pYk&embed_domain=" +
         window.location.hostname;
       frame.frameBorder = "0";
       frame.height = "400px";
@@ -62,7 +87,7 @@
       let wrapper = document.getElementById("chat-embed-wrapper");
       wrapper.appendChild(frame);
     </script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script> -->
 
     <!-- <script
       src="//code.tidio.co/omgpcsth1a2rkrse4xjno1bulozbuqej.js"
@@ -117,11 +142,11 @@
         });
       });
     </script> -->
-
+    <!-- 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </body>
 </html>
